--- a/git_test.ipynb
+++ b/git_test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOGDGZABb/Vm067FLfAjJW",
+      "authorship_tag": "ABX9TyMMqdQxvfHy38TUmKBOXI1W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "Kop_H07PLXjp"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LE5I93CuL4KZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
